MMA-6558 Refaktorer tilgangskontroll for /admin-endepunkta
Dette klargjer å ta i bruk Microsoft Graph-stubs og endring av getUser til å bruke Microsoft-Graph-klienten.

- Fjern bruk av Nav-Consumer-Token-header som ikkje er i bruk
- Gjer forenklingar i logikk og kva data som blir brukt i kall mot Microsoft Graph